# desolation_engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
Engine/: Main.cpp
Engine/Core/: Application.hpp  Input.hpp  Renderer.hpp  Time.hpp  Window.hpp
Engine/ECS/: Components.hpp  Prefabs.hpp  Systems.hpp
Engine/Graphics/: Camera.hpp  ConstantBuffers.hpp  Mesh.hpp  Shader.hpp
cmake/: directx.cmake  directxtex.cmake  directxtk.cmake  dxvk.cmake  flecs.cmake  imgui.cmake  openmp.cmake  sdl.cmake  slang.cmake  tinyobjloader.cmake
include/: dice.hpp  shader.hpp
include/game/: ball.hpp  colors.hpp  display.hpp  divider.hpp  game.hpp  game_component.hpp  gameable.hpp  input_device.hpp  moveable_object.hpp  players.hpp  shader_manager.hpp  vertex.hpp
shaders/: Common.hlsli  DeferredDirectional.hlsl  DeferredPointVolume.hlsl  DeferredSpotVolume.hlsl  GBufferPixelShader.hlsl  GBufferVertexShader.hlsl  MyVeryFirstShader.hlsl  MyVeryFirstShader.slang  ParticlePS.hlsl  ParticleVS.hlsl  PixelShader.hlsl  PointVolumeSphereVS.hlsl  PointVolumeVS.hlsl  ShadowVertexShader.hlsl  SpotVolumeVS.hlsl  VertexShader.hlsl
src/: Main.cpp  main.cpp
src/Game/: Camera.cpp  Camera.hpp  CameraComponent.cpp  CameraComponent.hpp  Colors.hpp  Cube.cpp  Cube.hpp  Engine.cpp  Engine.hpp  FPSCamera.cpp  FPSCamera.hpp  FullscreenQuad.cpp  FullscreenQuad.hpp  GBuffer.cpp  GBuffer.hpp  GameComponent.cpp  GameComponent.hpp  GameContext.hpp  Graphics.cpp  Graphics.hpp  InputManager.cpp  InputManager.hpp  KatamariBallComponent.cpp  KatamariBallComponent.hpp  KatamariGame.cpp  KatamariGame.hpp  Light.hpp  LightManager.cpp  LightManager.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  OrbitalCamera.cpp  OrbitalCamera.hpp  Particle.hpp  ParticleEmitterComponent.cpp  ParticleEmitterComponent.hpp  PerFrameConstants.hpp  PointLight.cpp  PointLight.hpp  (+10 more)
src/GameSet/: DebugScene.cpp  DebugScene.hpp  KatamariGame.cpp  KatamariGame.hpp  Planets.cpp  Planets.hpp
